fixed letter spacing in revamped button

--- a/packages/revamped-button/src/index.scss
+++ b/packages/revamped-button/src/index.scss
@@ -11,7 +11,7 @@
   font-family: $font-family;
   color: $grey-11;
   border-radius: 3px;
-  letter-spacing: 0.5px;
+  letter-spacing: normal;
   .fa {
     margin-right: 5px;
   }
